@@ -2,6 +2,7 @@ Development version (next version)
 - Fixed compatibility with CMake 4.0
 - Applied clang-format code style formatting
 - Added tuned parameters for many devices (see doc/tuning.md)
+- Enabled parallel kernel compilation for faster kernel tuning (see doc/tuning.md)
 
 Version 1.6.3
 - Fixed a bug in the GEMMK=1 kernel (with 2D register tiling) when MWG!=NWG
